<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="customer_profiles">"客户档案"</string>
    <string name="customer_name">名称</string>
    <string name="birthday">生日</string>
    <string name="native_place">籍贯</string>
    <string name="profession">职业</string>
    <string name="height">身高(厘米)</string>
    <string name="weight">体重(公斤)</string>
    <string name="systolic_pressure">收缩压(毫米汞柱)</string>
    <string name="diastolic_pressure">舒张压(毫米汞柱)</string>
    <string name="pulse">脉搏(次/分钟)</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="marital_status">婚否</string>
    <string name="unmarried">未婚</string>
    <string name="married">已婚</string>
    <string name="medical_history_1">病史一</string>
    <string name="medical_history_2">病史二</string>
    <string name="medical_history_3">病史三</string>
    <string name="memo">客户ID</string>
    <string name="customer_register_time">登记时间</string>
    <string name="customer_detect_time">最近检测时间</string>
    <string name="hello">Hello World, YHNTestActivity!</string>
    <string name="app_name">YHN远程健康检测系统</string>
    <string name="send">Send</string>
    <string name="not_connected">你还没有连接设备</string>
    <string name="bt_not_enabled_leaving">蓝牙设备未开启. 退出.</string>
    <string name="title_connecting">连接中...</string>
    <string name="title_connected_to">已连接:</string>
    <string name="title_not_connected">未连接</string>
    <string name="title_can_not_connect">无法连接设备</string>
    <string name="title_connect_lost">设备连接已经断开</string>
    <string name="scanning">扫描设备...</string>
    <string name="select_device">选择连接一个设备</string>
    <string name="none_paired">没有发现配对设备</string>
    <string name="none_found">没有发现设备</string>
    <string name="title_paired_devices">配对设备</string>
    <string name="title_other_devices">其他设备</string>
    <string name="button_scan">扫描设备</string>
    <string name="secure_connect">连接设备</string>
    <string name="insecure_connect">断开连接</string>
    <string name="discoverable">使设备可被发现</string>
    <string name="device_test">校准设备</string>
    <string name="login_server_ip">服务器地址:</string>
    <string name="login_account">登陆账号:</string>
    <string name="login_pwd">用户密码:</string>
    <string name="login_checkbox_save_pwd">记住密码</string>
    <string name="login_button_login">登陆</string>
    <string name="login_button_cancel">退出</string>
    <string name="new_add">新增</string>
    <string name="cancel">取消</string>
    <string name="new_save">保存</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="start_detect">开始检测</string>
    <string name="auto_detect_all">检测所有穴位</string>
    <string name="auto_detect_undetect">检测未检穴位</string>
    <string name="point_datas_list_title">用户检测数据</string>
    <string name="inte_reading">解读</string>
    <string name="customer_list_title">用户列表</string>
    <string name="device_check_voltage_value">标准电压: 7.7~7.9V</string>
    <string name="device_check_cur_prompt">当前电压:</string>
    <string name="device_check_stand_prompt">检测标准值: 79~81</string>
    <string name="device_check_stand_value">检测值:</string>
</resources>
