<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <Button
        android:id="@id/customer_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secure_connect"
        android:textSize="18.0sp"/>

    <Button
        android:id="@id/customer_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="18.0sp"/>

    <Button
        android:id="@id/disconnect_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insecure_connect"
        android:textSize="18.0sp"/>
</LinearLayout>