<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <Button
        android:id="@id/connect_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secure_connect"
        android:textSize="18.0sp"/>

    <TextView
        android:id="@id/prompt_text"
        style="?android:attr/windowTitleStyle"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="15.0sp"/>

    <Button
        android:id="@id/disconnect_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insecure_connect"
        android:textSize="18.0sp"/>
</LinearLayout>