<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@id/ScrollView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="12.0dip"
            android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10.0dip"
                android:text="@string/customer_profiles"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/memo"/>

            <EditText
                android:id="@id/customer_memo_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/customer_name"/>

            <EditText
                android:id="@id/customer_name_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/birthday"/>

            <Button
                android:id="@id/btnChangeDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:text="@string/birthday"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/native_place"/>

            <Spinner
                android:id="@id/customer_native_place_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:entries="@array/native_place_arrays"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/profession"/>

            <Spinner
                android:id="@id/customer_profession_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:entries="@array/prfession_arrays"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="15.0dip"
                android:text="@string/sex"/>

            <RadioGroup
                android:id="@id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40.0dip"
                android:layout_marginRight="10.0dip"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="45.0dip"
                    android:checked="true"
                    android:text="@string/male"/>

                <RadioButton
                    android:id="@id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="15.0dip"
                android:text="@string/marital_status"/>

            <RadioGroup
                android:id="@id/radioMaritalStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40.0dip"
                android:layout_marginRight="10.0dip"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@id/radioUnmarried"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30.0dip"
                    android:checked="true"
                    android:text="@string/unmarried"/>

                <RadioButton
                    android:id="@id/radioMarried"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/married"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/height"/>

            <EditText
                android:id="@id/customer_height_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:gravity="center"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/weight"/>

            <EditText
                android:id="@id/customer_weight_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:gravity="center"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/systolic_pressure"/>

            <EditText
                android:id="@id/customer_systolic_pressure_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:gravity="center"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/diastolic_pressure"/>

            <EditText
                android:id="@id/customer_diastolic_pressure_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:gravity="center"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/pulse"/>

            <EditText
                android:id="@id/customer_pulse_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:gravity="center"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/medical_history_1"/>

            <Spinner
                android:id="@id/customer_medical_history1_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:entries="@array/medical_history_arrays"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/medical_history_2"/>

            <Spinner
                android:id="@id/customer_medical_history2_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:entries="@array/medical_history_arrays"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/medical_history_3"/>

            <Spinner
                android:id="@id/customer_medical_history3_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:entries="@array/medical_history_arrays"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>