<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20.0dip"
            android:text="\n登陆服务器"
            android:textSize="20.0dip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="10.0dip"
            android:text="@string/login_account"
            android:textSize="18.0dip"/>

        <AutoCompleteTextView
            android:id="@id/login_account_edit"
            android:text=""
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginRight="20.0dip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="10.0dip"
            android:text="@string/login_pwd"
            android:textSize="18.0dip"/>

        <EditText
            android:id="@id/login_pwd_edit"
            android:text=""
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginRight="20.0dip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@id/login_save_pwd_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:text="@string/login_checkbox_save_pwd"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@id/login_login_button"
            android:layout_width="100.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:text="@string/login_button_login"/>

        <Button
            android:id="@id/login_cancel_button"
            android:layout_width="100.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:text="@string/login_button_cancel"/>
    </LinearLayout>
</LinearLayout>