<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:baselineAligned="false"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/device_check_voltage_value"
            android:textColor="@color/red"
            android:textSize="15.0dip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="10.0dip"
            android:text="@string/device_check_cur_prompt"
            android:textColor="@color/green"
            android:textSize="15.0dip"/>

        <TextView
            android:id="@id/device_test_cur_voltage_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginRight="10.0dip"
            android:textColor="@color/green"
            android:textSize="15.0dip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/device_check_stand_prompt"
            android:textColor="@color/red"
            android:textSize="15.0dip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="10.0dip"
            android:text="@string/device_check_stand_value"
            android:textColor="@color/green"
            android:textSize="15.0dip"/>

        <TextView
            android:id="@id/device_test_cur_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginRight="10.0dip"
            android:textColor="@color/green"
            android:textSize="15.0dip"/>
    </LinearLayout>

    <LinearLayout
        android:id="@id/check_chart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>
</LinearLayout>