<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F3F3F3"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="选择连接一个设备"
                android:textColor="#ff333333"
                android:textSize="18sp" />

            <TextView
                android:id="@id/title_paired_devices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_paired_devices"
                android:textColor="#ff666666"
                android:visibility="gone" />

        </LinearLayout>

        <ListView
            android:id="@id/paired_devices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:stackFromBottom="true" />

        <TextView
            android:id="@id/title_new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F3F3F3"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/title_other_devices"
            android:textColor="#ff666666"
            android:visibility="gone" />

        <ListView
            android:id="@id/new_devices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:stackFromBottom="true" />

        <Button
            android:id="@id/button_scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_scan"
            android:textColor="#ffffffff"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>